Fri Apr 14 22:15:00 1995  Theodore Y. Ts'o  <tytso@lurch.mit.edu>

	* an_to_ln.c (dbm_an_to_ln): Don't compile dbm_an_to_ln() if
	        USE_DBM_LNAME isn't defined.

Fri Apr 14 15:15:48 1995    <tytso@rsx-11.mit.edu>

	* hst_realm.c (krb5_get_host_realm): Eliminate memory leak in the
		unlikely case that gethostname fails.

		If the krb.realms file isn't available, use the default
		realm of the host.

Thu Apr 13 15:49:16 1995 Keith Vetter (keithv@fusion.com)

	* *.[ch]: removed unneeded INTERFACE from non-api functions.
        * read_pwd.c: __STDC__ conditional also checks the _WINDOWS define.

Fri Apr 7 15:32:04 1995 Keith Vetter (keithv@fusion.com)

	* ccdefname.c: 
           changed windows stored filename syntax--dropped the 'FILE:' part.
           changed buffer from malloc to static since we don't want it 
            ever to fail, and nobody checks it for errors.

Wed Apr 5 16:32:07 1995 Keith Vetter (keithv@fusion.com)

	* get_krbh.c: better error handling--old return values were 
           being overwritten.
        * locate_kdc.c: added new error code KRB5_REALM_CANT_RESOLVE for
           when we have realm names but can't find their addresses.
           Also, fixed up indenting of an if clause.
        * sendto_kdc.c: added winsock init/destroy calls because some
            PC tcp/ip stacks seem to need it.

Fri Mar 31 16:30:03 1995  Theodore Y. Ts'o  (tytso@dcl)

	* realm_dom.c (krb5_get_realm_domain): Don't indent #ifdef's!

	* hst_realm.c (krb5_get_host_realm): Don't indent #ifdef's!

Thu Mar 30 15:54:54 1995 Keith Vetter (keithv@fusion.com)

	* localaddr.c: in Windows/Mac code, fixed bug due to wrong level
           of indirection on memcpy call.

Tue Mar 28 19:22:28 1995 Keith Vetter (keithv@fusion.com)

        For Windows, added calls to get the default config, realms and
        ccache files out of a windows ini file.
        * ccdefname.c: does this for the credential cache.